# projeto_01

./: pyproject.toml
database/: db_model.py
model/: schema.py
src/: data.py  mapping.py  validation.py
